syntax = "proto3";

package pb;

option go_package = 'fiberinventory/internal/pb';

import "google/protobuf/timestamp.proto";

message Customer {
    string id = 1;
    string name = 2;
    string alamat = 3;
    string email = 4;
    string telepon = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CustomersRequest {

}

message CustomerResponse {
    Customer customer = 1;
}

message CustomersResponse {
    repeated Customer customers = 1;
}

message CreateCustomerInput {
    string name = 1;
    string alamat = 2;
    string email = 3;
    string telepon = 4;
}

message UpdateCustomerInput {
    string id = 1;
    string name = 2;
    string alamat = 3;
    string email = 4;
    string telepon = 5;
}

message CustomerRequest {
    string id = 1;
}

message DeleteCustomerResponse {
    bool success = 1;
}

service CustomerService {
    rpc CreateCustomer(CreateCustomerInput) returns (CustomerResponse) {}
    rpc GetCustomers(CustomersRequest) returns (CustomersResponse) {}
    rpc GetCustomer(CustomerRequest) returns (CustomerResponse) {}
    rpc UpdateCustomer(UpdateCustomerInput) returns (CustomerResponse) {}
    rpc DeleteCustomer(CustomerRequest) returns (DeleteCustomerResponse) {}
}
